--- a/lang/1033/bfuserprofile.xml
+++ b/lang/1033/bfuserprofile.xml
@@ -1,5 +1,5 @@
 <ZT2Strings>
       <LOC_STRING _locID="BFUserProfile" version="0" />
-      <LOC_STRING _locID="BFUserProfile:saveDirectory" version="0"  >Saved</LOC_STRING>
-      <LOC_STRING _locID="BFUserProfile:tempDirectory" version="0"  >tmp</LOC_STRING>
+      <LOC_STRING _locID="BFUserProfile:saveDirectory" version="0"  >저장됨</LOC_STRING>
+      <LOC_STRING _locID="BFUserProfile:tempDirectory" version="0"  >임시</LOC_STRING>
 </ZT2Strings>
