--- a/lang/1033/campaign1_entries_cp2_edits.xml
+++ b/lang/1033/campaign1_entries_cp2_edits.xml
@@ -1,7 +1,7 @@
 <ZT2Strings>
       <LOC_STRING _locID="genericscenariofailure" version="9" />
       <LOC_STRING _locID="genericscenariofailure:animaldiedsick" version="9"  >
-   		You lost one of your animals! Healthy animals are an essential part of a successful zoo. You were not able to keep your animals long enough to achieve your goals.
+   		당신은 당신의 동물 중 하나를 잃었습니다! 건강한 동물은 성공적인 동물원의 필수 요소입니다. 목표를 달성할 수 있을 만큼 동물을 오래 키울 수 없었습니다.
    	</LOC_STRING>
       <LOC_STRING _locID="C1scenariogoals" version="9" />
       <LOC_STRING _locID="C1scenariogoals:C1failanimaldeathoverview" version="9"  >
