--- a/lang/1033/amerikaans_strings.xml
+++ b/lang/1033/amerikaans_strings.xml
@@ -19,7 +19,7 @@
          <color r="255" g="248" b="178">
             <b>아메리카주걱철갑상어 가방</b>
          </color>
-         <br/>Guest wich loves to see the American paddlefish will buy this gift.
+         <br/>아메리카주걱철갑상어를 좋아하는 관람객들이 많이 찾는 상품입니다..
       </amerikaans_Gift_ltt>
 </entityname>
 <zoopedia_amerikaans>
