--- a/lang/1033/atlanticwhitemar_strings.xml
+++ b/lang/1033/atlanticwhitemar_strings.xml
@@ -30,7 +30,7 @@
          <color r="255" g="248" b="178">
             <b>백세치 셔츠</b>
          </color>
-         <br/>Guest that like to see the atlantic white marlin will buy this gift.
+         <br/>백세치를 좋아하는 관람객들이 많이 찾는 상품입니다.
       </atlanticwhitemar_Gift_ltt>
 </entityname>
 <zoopedia_atlanticwhitemar>
