--- a/lang/1033/bpsealde_strings.xml
+++ b/lang/1033/bpsealde_strings.xml
@@ -30,7 +30,7 @@
          <color r="255" g="248" b="178">
             <b>아남극물개 가방</b>
          </color>
-         <br/>Guests who enjoy watching the Subantarctic Fur Seal will buy this gift.
+         <br/>아남극물개를 좋아하는 관람객들이 많이 찾는 상품입니다.
       </bpsealde_Gift_ltt>
 </entityname>
 <zoopedia_bpsealde>
