--- a/lang/1033/cymbospondylu_strings.xml
+++ b/lang/1033/cymbospondylu_strings.xml
@@ -19,7 +19,7 @@
          <color r="255" g="248" b="178">
             <b>심보스폰딜루스 셔츠</b>
          </color>
-         <br/>Guests who enjoy watching the cymbospondylu will buy this gift.
+         <br/>심보스폰딜루스를 좋아하는 관람객들이 많이 찾는 상품입니다.
       </cymbospondylu_Gift_ltt>
    </entityname>
    
