--- a/lang/1033/devilray_strings.xml
+++ b/lang/1033/devilray_strings.xml
@@ -19,7 +19,7 @@
          <color r="255" g="248" b="178">
             <b>대서양 쥐가오리 가방</b>
          </color>
-         <br/>Guests who enjoy watching the Atlantic Devil Ray will buy this gift.
+         <br/>대서양 쥐가오리를 좋아하는 관람객들이 많이 찾는 상품입니다.
       </devilray_Gift_ltt>
 </entityname>
 <zoopedia_devilray>
