--- a/lang/1033/stellerzeekoedeni_strings.xml
+++ b/lang/1033/stellerzeekoedeni_strings.xml
@@ -30,7 +30,7 @@
          <color r="255" g="248" b="178">
             <b>스텔러바다소 인형</b>
          </color>
-         <br/>Guest how love to see the Steller Sea Cow will buy this gift.
+         <br/>스텔러바다소를 좋아하는 관람객들이 많이 찾는 상품입니다.
       </stellerzeekoedeni_Gift_ltt>
 </entityname>
 <zoopedia_stellerzeekoedeni>
